desynchronized canvas for draw performance and latency, proper stamp brush spacing and alpha artifact fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   height: 100%;
+  width: 100%;
+  max-width: 1500px;
 }
 
 .interface-container {
@@ -15,5 +16,5 @@
 .interface-main {
   display: flex;
   flex-direction: row;
-  height: 70%;
+  height: 100%;
 }
