--- a/src/components/Board/styles.css
+++ b/src/components/Board/styles.css
@@ -5,7 +5,6 @@
 .canvases {
   display: flex;
   position: relative;
-  width: 500px !important;
 }
 
 .layer_canvas {
