--- a/src/components/ToolSettings/styles.css
+++ b/src/components/ToolSettings/styles.css
@@ -1,5 +1,5 @@
 .tool_settings_container {
-  height: 50px;
+  height: unset;
 }
 
 .tool_settings {
